syntax = "proto3";

option csharp_namespace = "GrpcMessager";

package PublisherProto;

service PublisherProto {
  rpc Publish(PublishRequest) returns (PublishReply);
}

message PublishRequest {
  string topic = 1;
  string message = 2;
}

message PublishReply {
  bool isConnected = 1;
}
